--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,12 @@
-DB_HOST=localhost
+# Database Configuration
+DB_HOST=instrux.live
 DB_USER=root
-DB_PASSWORD=Football.321
-DB_NAME=user_db
-JWT_SECRET=thisissecrettoken
+DB_PASS=Neurocomputation@@1
+DB_NAME=admin_instrux
+
+# Email Configuration
+SMTP_SERVER=smtp.gmail.com
+SMTP_USER=nclab.ncai@gmail.com
+SMTP_PASS=sciujxountmkqhgb
+DEFAULT_EMAIL=nclab.ncai@gmail.com
+DEFAULT_EMAIL_NAME=Instrux
