--- a/backend/.env
+++ b/backend/.env
@@ -10,3 +10,5 @@ SMTP_USER=nclab.ncai@gmail.com
 SMTP_PASS=sciujxountmkqhgb
 DEFAULT_EMAIL=nclab.ncai@gmail.com
 DEFAULT_EMAIL_NAME=Instrux
+
+PORT=3000
